--- a/src/main/res/layout/activity_add_food.xml
+++ b/src/main/res/layout/activity_add_food.xml
@@ -23,7 +23,7 @@
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorPrimaryDark" />
+            android:background="@color/colorPrimaryLight" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
