--- a/src/main/res/layout/item_main.xml
+++ b/src/main/res/layout/item_main.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    app:cardBackgroundColor="@android:color/darker_gray"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="20dp"
+    app:cardUseCompatPadding="false">
 
 
     <TextView
+        android:id="@+id/foodNameTxtView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="food1"
-        android:layout_marginTop="10dp"
-        android:id="@+id/foodNameTxtView"
-        android:background="@drawable/item_main_background"
-        android:textAppearance="?attr/textAppearanceSubtitle1"
         android:gravity="center_horizontal"
-        android:padding="10dp"/>
+        android:padding="10dp"
+        android:text="food1"
+        android:textAppearance="?attr/textAppearanceSubtitle1" />
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
